--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@
 }
 
 /*Reset base*/
-html, body, p {
+html, body, h2, p {
   margin: 0;
   padding: 0;
 }
@@ -30,7 +30,7 @@ body {
 
 .container {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   margin: 60px 15px;
   height: 100%;
   align-items: center;
@@ -76,7 +76,7 @@ body {
 .card-name {
   margin: 15px;
   font-family: "Miso", sans-serif;
-  font-size: 56px;
+  font-size: 50px;
   font-weight: 400;
   font-stretch: extra-condensed;
 }
